etc/kubernetes/manifests/dc.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: dc-latest
  namespace: rodrigollanos
  selfLink: /api/v1/namespaces/rodrigollanos/replicationcontrollers/dc
  uid: 2b4b94b7-25bc-4fa3-a861-d4a9f5214118
  resourceVersion: '918620'
  generation: 9
  creationTimestamp: '2021-05-19T11:30:48Z'
  labels:
    app: santander-phpinfo
  managedFields:
    - manager: kube-controller-manager
      operation: Update
      apiVersion: v1
      time: '2021-05-20T10:41:20Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:status':
          'f:availableReplicas': {}
          'f:fullyLabeledReplicas': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
    - manager: Mozilla
      operation: Update
      apiVersion: v1
      time: '2021-05-20T10:42:00Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
        'f:spec':
          'f:replicas': {}
          'f:selector':
            .: {}
            'f:app': {}
          'f:template':
            .: {}
            'f:metadata':
              .: {}
              'f:creationTimestamp': {}
              'f:labels':
                .: {}
                'f:app': {}
            'f:spec':
              .: {}
              'f:containers':
                .: {}
                'k:{"name":"php"}':
                  .: {}
                  'f:env':
                    .: {}
                    'k:{"name":"nombre_alumno"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                  'f:image': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":8080,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:resources':
                    .: {}
                    'f:limits':
                      .: {}
                      'f:cpu': {}
                      'f:memory': {}
                    'f:requests':
                      .: {}
                      'f:cpu': {}
                      'f:memory': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
spec:
  replicas: 2
  selector:
    app: santander-phpinfo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: santander-phpinfo
    spec:
      containers:
        - name: php
          image: 'index.docker.io/rodrigollanos1/phpinfo:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 40m
              memory: 40M
            requests:
              cpu: 20m
              memory: 20M
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
status:
  replicas: 2
  fullyLabeledReplicas: 2
  readyReplicas: 1
  availableReplicas: 1
  observedGeneration: 8
