etc/kubernetes/manifests/santander-phpinfo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rllanos-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  selector:
    app: santander-phpinfo-svc
